--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 		<junit.version>4.13.2</junit.version>
 		<commons.lang3.version>3.13.0</commons.lang3.version>
 		<slf4j.version>1.7.36</slf4j.version>
+		<trevas.version>1.0.2</trevas.version>
 	</properties>
 
 	<build>
@@ -146,6 +147,12 @@
 			<groupId>org.antlr</groupId>
 			<artifactId>antlr4</artifactId> <!-- for grammar interpreter -->
 			<version>${antlr4.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>fr.insee.trevas</groupId>
+			<artifactId>vtl-parser</artifactId>
+			<version>${trevas.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
